k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: achat-app
  labels:
    name: achat-app
    environment: production
